--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.0.2",
+    "next": "*",
     "react": "^18",
     "react-dom": "^18"
   },
