--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
       {
         "printWidth": 120,
         "trailingComma": "none",
+        "endOfLine": "crlf",
         "plugins": ["prettier-plugin-tailwindcss"]
       }
     ]
