--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "postcss": "^8",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.7",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "*",
     "typescript": "^5"
   }
 }
